# techcorp-ai-chat

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
app/: .env.example  Dockerfile  config.md  index.html  package-lock.json  package.json
app/src/: App.jsx  index.css
app/src/components/: BrandIcon.jsx  ChatInput.jsx  ChatMessage.jsx  ConfirmDialog.jsx  Sidebar.jsx
app/src/lib/: ollama.js  useLocalStorage.js  useSpeechRecognition.js  useSpeechSynthesis.js  useTypewriter.js
docs/: config.md  rapport_audit_securite.md  rapport_qualite_donnees.md
medical_dataset/: config.md
medical_dataset/output/: medical_dataset_clean.json  medical_dataset_report.md
models/: config.md  finetuning.py  test.py
notebooks/: exploration.ipynb  medical_finetuning_report.ipynb
ollama_server/: Modelfile
scripts/: config.md  data_processing.py  prepare_medical_dataset.py  simple_chat.py  train_finance__model.py  train_medical_model.py
scripts/medical_model_trained/: adapter_config.json  test_conversations.json  tokenizer_config.json  training_log.json  training_summary.json
tritton_server/: config.md
