[project]
name = "techcorp-ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "trl>=1.7.0",
]
